// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App after advice fetched renders advice 1`] = `
<div
  className="App"
>
  <p
    className="Advice"
  >
    Always trust random advice.
  </p>
  <ShowOtherAdviceButton
    loadAdvice={[Function]}
  />
</div>
`;

exports[`App before advice fetched renders loading indicator 1`] = `
<div
  className="App"
>
  <p
    className="Advice"
  >
    …
  </p>
  <ShowOtherAdviceButton
    loadAdvice={[Function]}
  />
</div>
`;

exports[`App when hitting "Show other advice" button should render other advice 1`] = `
<App>
  <div
    className="App"
  >
    <p
      className="Advice"
    >
      …
    </p>
    <ShowOtherAdviceButton
      loadAdvice={[Function]}
    >
      <div
        className="App"
      >
        <button
          className="Advice-other-advice-button"
          onClick={[Function]}
        >
          Show other advice
        </button>
      </div>
    </ShowOtherAdviceButton>
  </div>
</App>
`;
